--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_sign_in:
   cupertino_icons: ^1.0.2
   get: 4.6.1
+  table_calendar: ^3.0.5
 
 dev_dependencies:
   flutter_test:
@@ -25,18 +26,10 @@ dev_dependencies:
 
   flutter_lints: ^1.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
   - img/alarm.png
   - img/together_car.png
