--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_sign_in:
   cupertino_icons: ^1.0.2
   get: 4.6.1
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
