--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.1
   table_calendar: ^3.0.5
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
