--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   get: 4.6.1
   table_calendar: ^3.0.5
   image_picker: ^0.8.5+3
+  google_maps_flutter:
+  http:
+  json_serializable:
+  build_runner:
+
 
 dev_dependencies:
   flutter_test:
@@ -34,3 +39,4 @@ flutter:
   assets:
   - img/alarm.png
   - img/together_car.png
+  - img/locations.json
