--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
         android:label="temp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyD1mGEu_fhaGjfqn0NKBt2TwbHjl3l5_PI"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -30,5 +32,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+<!--       <meta-data-->
+<!--           android:name="com.google.mlkit.vision.DEPENDENCIES"-->
+<!--           android:value="ica,ocr,face" />-->
     </application>
 </manifest>
