--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,14 @@ dependencies:
   google_sign_in:
   cupertino_icons: ^1.0.2
   get: 4.6.1
-  table_calendar: ^3.0.5
   image_picker: ^0.8.5+3
+  table_calendar: ^3.0.5
+  google_ml_kit: ^0.11.0
+  json_annotation: ^4.5.0
+  google_maps_flutter_web: ^0.3.3
+  http: ^0.13.4
+  json_serializable: ^6.2.0
+  google_maps_flutter: ^2.1.7
 
 dev_dependencies:
   flutter_test:
