--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
   flutter:
@@ -18,13 +18,15 @@ dependencies:
   google_sign_in:
   cupertino_icons: ^1.0.2
   get: 4.6.1
-  table_calendar: ^3.0.5
   image_picker: ^0.8.5+3
-  google_maps_flutter:
-  http:
-  json_serializable:
+  table_calendar: ^3.0.5
+  google_ml_kit: ^0.11.0
+  json_annotation: ^4.5.0
+  google_maps_flutter_web: ^0.3.3
+  http: ^0.13.4
+  json_serializable: ^6.2.0
+  google_maps_flutter: ^2.1.7
   build_runner:
-
 
 dev_dependencies:
   flutter_test:
@@ -32,10 +34,18 @@ dev_dependencies:
 
   flutter_lints: ^1.0.0
 
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
+
+# The following section is specific to Flutter.
 flutter:
 
+  # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
+  # the material Icons class.
   uses-material-design: true
 
+  # To add assets to your application, add an assets section, like this:
   assets:
   - img/alarm.png
   - img/together_car.png
